Fixed bug #41971 (PDOStatement::fetch and PDOStatement::setFetchMode causes unexpected behavior).